<resources>
    <string name="app_name">Catalogue MovieSub2</string>
    <string name="title_film">films</string>
    <string name="title_tvshow">tvshows</string>
    <string name="title_home">Home</string>
    <string name="tittle_films">tittle</string>
    <string name="score_films">score</string>
    <string name="description_films">description</string>
    <string name="status_films">status</string>
    <string name="runtime_films">runtime</string>
    <string name="relase_films">relase</string>
    <string name="lengueage_films">lengueage</string>
    <string name="genre_films">genre</string>
    <string name="score_form_films">Score :</string>
    <string name="status_form_films">status :</string>
    <string name="relase_form_films">Relase :</string>
    <string name="runtime_form_films">Runtime :</string>
    <string name="lenguage_form_films">Lenguage :</string>
    <string name="genre_form_films">Genre</string>
    <string name="overview_form_films">Overview</string>
    <string name="tittle_tvshows">tittle</string>
    <string name="score_tvshows">score</string>
    <string name="description_tvshows">description</string>
    <string name="status_tvshows">status</string>
    <string name="relase_tvshows">relase</string>
    <string name="lengueage_tvshows">lengueage</string>
    <string name="genre_tvshows">genre</string>
    <string name="score_form_tvshows">Score :</string>
    <string name="status_form_tvshows">status :</string>
    <string name="relase_form_tvshows">Relase :</string>
    <string name="lenguage_form_tvshows">Lenguage :</string>
    <string name="genre_form_tvshows">Genre</string>
    <string name="overview_form_tvshows">Overview</string>
    <string name="poster_tvshows">poster tvshows</string>
    <string name="only_line1">only line</string>
    <string name="only_line_2">only line 2</string>
    <string name="only_line_3">only line 3</string>
    <string name="only_line_4">only line 4</string>
    <string name="only_line_5">only line 5</string>
    <string name="poster_films">poster films</string>
    <string name="only_limit_1">only limit 1</string>
    <string name="only_limit_2">only limit 2</string>
    <string name="only_limit_3">only limit 3</string>
    <string name="only_limit_4">only limit 4</string>
    <string name="only_limit_5">only limit 5</string>
    <string name="only_limit_6">only limit 6</string>
    <string name="change_lenguage">change lenguage</string>
    <string-array name="data_tittle_films">
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee </item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Retired Thug</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Venom</item>
    </string-array>
    <string-array name="data_score_films">
        <item>68%</item>
        <item>83%</item>
        <item>81%</item>
        <item>65%</item>
        <item>69%</item>
        <item>77%</item>
        <item>75%</item>
        <item>65%</item>
        <item>65%</item>
        <item>58%</item>
        <item>84%</item>
        <item>66%</item>
    </string-array>
    <string-array name="data_overview_films">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpools PG-13 rendition of Deadpool 2 as a Princess Bride-esque story thats full of magic, wonder and zero Fs.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called Broly who theyve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so whats this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>After three years, the business of Muslihat or Epi Kusnandar, who has retired as a thug, has a problem. Sales decline. Muslihat also faces new problems when Safira Maharani, her only daughter, grows up in adolescence and begins to be visited by boys. A bigger problem is frictions between his former subordinates.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="data_status_films">
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
    </string-array>
    <string-array name="data_runtime_films">
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>2h 15m</item>
        <item>1h 54m</item>
        <item>1h 57m</item>
        <item>1h 44m</item>
        <item>1h 41m</item>
        <item>2h 9m</item>
        <item>1h 34m</item>
        <item>1h 56m</item>
        <item>1h 57m</item>
        <item>1h 52m</item>
    </string-array>
    <string-array name="data_relase_films">
        <item>December 21, 2018</item>
        <item>April 23, 2018</item>
        <item>November 2, 2018</item>
        <item>December 21, 2018</item>
        <item>December 11, 2018</item>
        <item>February 22, 2019</item>
        <item> January 16, 2019</item>
        <item>January 18, 2019</item>
        <item>January 17, 2019</item>
        <item>November 21, 2018</item>
        <item> December 14, 2018</item>
        <item>October 5, 2018</item>
    </string-array>
    <string-array name="data_lenguage_films">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Japanese</item>
        <item>English</item>
        <item>English</item>
        <item>Indonesian</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </string-array>
    <string-array name="data_genre_films">
        <item>action, adventure, fantasy</item>
        <item>action, adventure, science fiction</item>
        <item>drama, music</item>
        <item>action, adventure, science fiction</item>
        <item>comedy, action</item>
        <item>animation, family, adventure</item>
        <item>action, animation, fantasy, adventure, comedy, science fiction</item>
        <item>triller, science ficton, drama</item>
        <item>drama, comedy</item>
        <item>adventure, action, triller</item>
        <item>action, adventure, animation, comedy, science fiction</item>
        <item>action, science fiction</item>
    </string-array>
    <string-array name="data_tittle_tvshows">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>Flash</item>
        <item>Gotham</item>
        <item>Naruto Shipudden</item>
        <item>Supergirl</item>
        <item>The Simpsons</item>
        <item>The Walking Dead</item>
    </string-array>
    <string-array name="data_scores_tvshows">
        <item>58%</item>
        <item>64%</item>
        <item>71%</item>
        <item>65%</item>
        <item>65%</item>
        <item>67%</item>
        <item>69%</item>
        <item>76%</item>
        <item>59%</item>
        <item>71%</item>
        <item>73%</item>
    </string-array>
    <string-array name="data_status_tvshows">
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
        <item>Relased</item>
    </string-array>
    <string-array name="data_relase_tvshows">
        <item>October 10, 2012</item>
        <item>February 15, 2019</item>
        <item>February 26, 1986</item>
        <item>October 12, 2009</item>
        <item>January 31, 1999</item>
        <item>October 7, 2014</item>
        <item>September 22, 2014</item>
        <item>February 15, 2007</item>
        <item>October 26, 2015</item>
        <item>December 17, 1989</item>
        <item>October 31, 2010</item>
    </string-array>
</resources>