<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detail.FilmsDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_film"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:layout_marginEnd="201dp"
        android:layout_marginBottom="215dp"
        android:contentDescription="@string/poster_films"
        android:scaleType="fitXY"
        android:src="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <TextView
        android:id="@+id/tv_tittle_film"
        android:layout_width="395dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/tittle_films"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/img_film"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="76dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:text="@string/score_form_films"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_film"
        app:layout_constraintEnd_toEndOf="@+id/tv_status_film"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_status_film"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_film"
        app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_score_film"
            android:layout_width="181dp"
            android:layout_height="25dp"
            android:fontFamily="monospace"
            android:text="@string/score_films"
            android:textColor="@color/greenku"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/img_film"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00A8A7A7"
        android:text="@string/status_form_films"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_film"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toEndOf="@+id/img_film"
        app:layout_constraintTop_toTopOf="@+id/img_film"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_status_film"
        android:layout_width="180dp"
        android:layout_height="27dp"
        android:text="@string/status_films"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_film"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="55dp"
        android:layout_height="17dp"
        android:layout_marginTop="20dp"
        android:text="@string/relase_form_films"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_film"
        app:layout_constraintEnd_toEndOf="@+id/tv_score_film"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_score_film"
        app:layout_constraintTop_toBottomOf="@+id/tv_score_film"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/tv_relase_film"
        android:layout_width="182dp"
        android:layout_height="28dp"
        android:text="@string/relase_films"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/img_film"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/runtime_form_films"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_film"
        app:layout_constraintEnd_toEndOf="@+id/tv_relase_film"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_relase_film"
        app:layout_constraintTop_toBottomOf="@+id/tv_relase_film"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_runtime_film"
        android:layout_width="175dp"
        android:layout_height="24dp"
        android:text="@string/runtime_films"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="121dp"
        android:text="@string/lenguage_form_films"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_film"
        app:layout_constraintEnd_toEndOf="@+id/tv_runtime_film"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_runtime_film"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_lenguage_film"
        android:layout_width="175dp"
        android:layout_height="21dp"
        android:text="@string/lengueage_films"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_film"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="382dp"
        android:layout_weight="1"
        android:background="@color/grey"
        android:text="@string/genre_form_films"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_film"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_genre_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genre_films"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:text="@string/overview_form_films"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre_film" />

    <TextView
        android:id="@+id/tv_description_film"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/description_films"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.839" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>